More node server refactoring
Node server is becoming the default for EpicDoc.
The plan once was to design EpicDoc with an exchangeable server API.
It's not worth the overhead. Node is platform independent and we'll stick to that.
This way we don't need to consider other players and can concentrate on functionality.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-/epicdoc-server-node/.settings
-/epicdoc-server-node/node_modules
+/epicdoc-server/.settings
+/epicdoc-server/.project
+/epicdoc-server/node_modules
 /data.js
